--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Artefatos:
     - Termo de Abertura do Projeto: artefatos/tap.md
     - Termo de Acordo de Serviço: artefatos/ts.md
+    - Termo de Acordo de Serviço (Equipe Gestão de Passivos): artefatos/ts-equipe_passivos.md
 
 markdown_extensions:
   - admonition
