Atualiza yml mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,11 +2,13 @@ site_name: ALM
 
 nav:
   - Sobre: index.md
+  - Relatório de Status: artefatos/relatorio-semanal.md
   - Artefatos:
     - Termo de Abertura do Projeto: artefatos/tap.md
     - Termo de Acordo de Serviço: artefatos/ts.md
-    - Termo de Acordo de Serviço (Equipe Gestão de Ativos): artefatos/acordo_de_servico_equipe_ativos.md
+    - Termo de Acordo de Serviço (Equipe Gestão de Ativos): artefatos/acordo-equipe_ativos.md
     - Termo de Acordo de Serviço (Equipe Gestão de Passivos): artefatos/acordo-equipe_passivos.md
+    - Termo de Acordo de Serviço (Equipe Gestão de Riscos): artefatos/acordo-equipe_riscos.md
 
 markdown_extensions:
   - admonition
