Add personas path

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,8 @@ nav:
   - Artefatos:
       - Termo de Abertura do Projeto: artefatos/tap.md
       - Termo de Acordo de Serviço: artefatos/ts.md
+      - Story map:
+        - Personas: artefatos/storymap/personas.md
       - Acordos de Serviço:
           - Termo de Acordo de Serviço (Equipe Gestão de Ativos): artefatos/acordo-equipe_ativos.md
           - Termo de Acordo de Serviço (Equipe Gestão de Passivos): artefatos/acordo-equipe_passivos.md
