Add elicitacao-requisitos path

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ nav:
       - Termo de Acordo de Serviço: artefatos/ts.md
       - Story map:
         - Personas: artefatos/storymap/personas.md
+        - Elicitação de requisitos: artefatos/storymap/elicitacao-requisitos.md
       - Acordos de Serviço:
           - Termo de Acordo de Serviço (Equipe Gestão de Ativos): artefatos/acordo-equipe_ativos.md
           - Termo de Acordo de Serviço (Equipe Gestão de Passivos): artefatos/acordo-equipe_passivos.md
